# cmake_templates

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
lib/include/: io.h
lib/source/: CMakeLists.txt  io.cpp
main/include/: main.h
main/source/: CMakeLists.txt  main.cpp
